mudança no design

--- a/index.html
+++ b/index.html
@@ -4,10 +4,60 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cloud Static Web App - Lab 4</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background: linear-gradient(to right, #4facfe, #00f2fe);
+            color: #333;
+        }
+        header {
+            background-color: #003366;
+            color: white;
+            padding: 20px 0;
+            text-align: center;
+        }
+        header h1 {
+            margin: 0;
+            font-size: 2.5em;
+        }
+        main {
+            max-width: 800px;
+            margin: 20px auto;
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+        main p {
+            font-size: 1.2em;
+            line-height: 1.6;
+        }
+        footer {
+            text-align: center;
+            padding: 10px 0;
+            background-color: #003366;
+            color: white;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
 
-    <h1>Aplicação Web Estática na Cloud - Laboratório 4</h1>
-    <p>Esta é uma aplicação web estática na cloud para o laboratório número 4. Foi criada por Diogo Gonçalves e André Nóbrega.</p>
+    <header>
+        <h1>Aplicação Web Estática na Cloud</h1>
+    </header>
+
+    <main>
+        <p>Bem-vindo à aplicação web estática na cloud para o laboratório número 4. Este projeto foi desenvolvido por <strong>Diogo Gonçalves</strong> e <strong>André Nóbrega</strong> como parte de um trabalho universitário.</p>
+    </main>
+
+    <footer>
+        &copy; 2023 Diogo Gonçalves e André Nóbrega. Todos os direitos reservados.
+    </footer>
+
 </body>
 </html>
