mudança no design 3

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </header>
 
     <main>
-        <p>Bem-vindo à aplicação web estática na cloud para o laboratório número 4. Este projeto foi desenvolvido por <strong>Diogo Gonçalves</strong> e <strong>André Nóbrega</strong> como parte de um trabalho universitário.</p>
+        <p>Bem-vindo à aplicação web estática na cloud para o laboratório número 4. Este projeto foi desenvolvido pelo <strong>Diogo Gonçalves</strong> e <strong>André Nóbrega</strong> como parte da cadeira de Cloud Computing.</p>
     </main>
 
     <footer>
